[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Overworld/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Overworld/BoxFill.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/Text box corner.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Text box top.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Text box side.png" type="Texture" id=5]
[ext_resource path="res://Sounds/UI/Text box 1.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/UI/Text box 2.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/UI/Text type.wav" type="AudioStream" id=8]
[ext_resource path="res://Fonts/font_standard.tres" type="DynamicFont" id=9]

[node name="Dialogue" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="BoxFill" type="Node2D" parent="." index="0"]

script = ExtResource( 2 )

[node name="BoxTL" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="BoxT" type="Sprite" parent="." index="2"]

position = Vector2( 5, 0 )
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="BoxTR" type="Sprite" parent="." index="3"]

position = Vector2( 19, 0 )
texture = ExtResource( 3 )
centered = false
flip_h = true
_sections_unfolded = [ "Offset" ]

[node name="BoxL" type="Sprite" parent="." index="4"]

position = Vector2( 0, 5 )
texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="BoxBL" type="Sprite" parent="." index="5"]

position = Vector2( 0, 19 )
texture = ExtResource( 3 )
centered = false
flip_v = true
_sections_unfolded = [ "Offset" ]

[node name="BoxB" type="Sprite" parent="." index="6"]

position = Vector2( 5, 19 )
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="BoxR" type="Sprite" parent="." index="7"]

position = Vector2( 19, 5 )
texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="BoxBR" type="Sprite" parent="." index="8"]

position = Vector2( 19, 19 )
texture = ExtResource( 3 )
centered = false
flip_h = true
flip_v = true
_sections_unfolded = [ "Offset" ]

[node name="Sound1" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Sound2" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SoundType" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="TimerStart" type="Timer" parent="." index="12"]

process_mode = 1
wait_time = 0.16
one_shot = true
autostart = false

[node name="DText" type="Label" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 89.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "T-this is a test of the dialogue system."
autowrap = true
percent_visible = 0.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="TimerBuffer" type="Timer" parent="." index="14"]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false

[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]

[connection signal="timeout" from="TimerBuffer" to="." method="_on_TimerBuffer_timeout"]


